# diviora-orchestrator

./: .env.example  AGENTS.md  README.md  V0_OPERATOR_READINESS.md  V0_REAL_RUNTIME_VALIDATION.md  V0_RUNTIME_AND_CI_VALIDATION.md  V0_USAGE_VALIDATION.md  V0_WORKER_LANE_READINESS.md  pyproject.toml
.github/workflows/: ci.yml
examples/: code_task.json  research_task.json
src/diviora/: __init__.py  approvals.py  artifacts.py  cli.py  config.py  graph.py  ledger.py  runtime_deps.py  schemas.py  state.py
src/diviora/compat/: __init__.py  langgraph_shim.py
src/diviora/planning/: planner.py  prompts.py
src/diviora/tasks/: base.py  code_task.py  research_report.py
src/diviora/validation/: validate_output.py  validate_plan.py  validate_step.py
src/diviora/workers/: base.py  external_terminal_worker.py  llm_worker.py  shell_worker.py
src/pydantic/: __init__.py
tests/: test_artifacts.py  test_code_task_flow.py  test_ledger.py  test_plan_validation.py  test_research_report_flow.py  test_schemas.py  test_worker_contract.py
