[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diviora-orchestrator"
version = "0.1.0"
description = "Diviora Orchestrator v0 deterministic orchestration kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "langgraph>=0.2.0",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
diviora = "diviora.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
